projects/gitops-workflow-lab/apps/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: platform-staging
spec:
  rules:
    - host: podinfo-staging.local
